fixed deck wrapping on commission

--- a/dev/scss/component/_deck.scss
+++ b/dev/scss/component/_deck.scss
@@ -68,6 +68,12 @@ div.deck-wrap {
 
 /* ////////////////////////////////////////////////////////////////// DECK-TEXT /// */
 
+section.deck-text {
+    @media (max-width: 1200px) {
+        flex-wrap: wrap;   
+    }
+}
+
 .deck-text {
     .deck-wrap .track,
     .deck-wrap .track-2 {
