--- a/dev/scss/old/component/_nav.scss
+++ b/dev/scss/old/component/_nav.scss
@@ -38,6 +38,11 @@ a.cart {
     }
 }
 
+
+#HeaderMenu-MenuList-1 > li {
+    padding-bottom: 0;
+}
+
 // header nav {
 //     z-index: 2;
 //     position: relative;
